--- a/index.html
+++ b/index.html
@@ -172,18 +172,18 @@
                  margin:10% auto;
 
              }
-             color:#b1d1f8
+            
          }
          .hi{
              width:80%;
              padding:1%;
              font-family: 'Titillium Web', sans-serif;
-             font-weight:light 300;
+             font-weight: 900;
              border-radius: 10px;
              text-align: center;
              margin:35px auto;
              margin-top:20px;
-             background:linear-gradient(to left ,#ecb3f7,#b1d1f8);
+             background:linear-gradient(55deg ,#ecb3f7,#b1d1f8);
          }
         </style>
     </head>
@@ -221,7 +221,7 @@
                 </p>
             </div>
             </div>
-        <div class="btn">Button</div>
+        <div class="btn">Place oreder</div>
         </div>
 
 
